--- a/themes/alpha-dust-master/_config.yml
+++ b/themes/alpha-dust-master/_config.yml
@@ -25,20 +25,14 @@ comments:
 google_analytics:
 
 # Social Accounts
-twitter_url: https://twitter.com/?lang=en
-facebook_url: https://www.facebook.com/
-instagram_url: https://www.instagram.com/
-dribble_url: https://dribbble.com/
-github_url: https://github.com/klugjo/hexo-theme-alpha-dust
-googleplus_url: https://plus.google.com/
-behance_url: https://www.behance.net/
-fivehundredpx_url: https://500px.com/
-email_url: test@example.com
-rss_url: \#
+twitter_url: https://twitter.com/khaing_KX
+facebook_url: https://www.facebook.com/khaingmyae.khant
+github_url: https://github.com/kh4nt99
+email_url: khaingmyelkhant@ucsm.edu.mm
 
 # Footer About Text
-footer_about: "This theme was developed by <a href=\"https://github.com/klugjo\">Jonathan Klughertz</a>. The source code is available on Github. Create Websites. Make Magic."
+footer_about: "Greetz, UCSM Hackers"
 
 # Footer Copyright Line
-footer_copyright: "@Untitled. All right reserved | Design & Hexo <a href=\"http://www.codeblocq.com/\">Jonathan Klughertz</a>"
+footer_copyright: "@Copyright. All right reserved | Powered By <a href=\"http://hexo.io/\">Hexo</a>"
 
